--- a/1. Построение простой нейросети в среде Google_Colaboratory/Практическая_работа_№_1_Построение_простой_нейросети_в_среде_Google_Colaboratory_на_языке_программирования_Python_Обучение_базовой_модели.ipynb
+++ b/1. Построение простой нейросети в среде Google_Colaboratory/Практическая_работа_№_1_Построение_простой_нейросети_в_среде_Google_Colaboratory_на_языке_программирования_Python_Обучение_базовой_модели.ipynb
@@ -8,7 +8,7 @@
         "xj9eyI7q09Rb",
         "2qm4uctJ8f3f"
       ],
-      "authorship_tag": "ABX9TyOMO/FAQnQ8PJRwV7rDzZVs",
+      "authorship_tag": "ABX9TyMifAwwYHBZ7LZ4DFuvcwM8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -69,136 +69,163 @@
       }
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "gcNf7v_207w4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "9d5f91a6-bf66-4856-cbe8-3638c2b1f5b4"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Стартовые веса:  [0.19, 0.4]\n"
-          ]
-        }
-      ],
+      "cell_type": "markdown",
       "source": [
-        "speed = 0.3\n",
-        "w = [randint(0,100)/100, randint(0,100)/100]\n",
-        "print(\"Стартовые веса: \",w)\n",
-        "\n",
-        "x_train = [[1, 1], [1, 0], [0, 1], [0, 0]]\n",
-        "y_train = [1, 0, 0, 0]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "krt3PiIK1VuH"
-      },
-      "outputs": [],
-      "source": [
-        "def predict(x_train):\n",
-        "  summator = x_train[0] * w[0] + x_train[1] * w[1]\n",
-        "  act = 1 if summator >= 1 else 0\n",
-        "  return act"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Lw2apgUncic6"
-      },
-      "outputs": [],
-      "source": [
-        "def train(x_train, y_train, w):\n",
-        "  for i in range(len(x_train)):\n",
-        "    error = y_train[i] - predict([x_train[i][0], x_train[i][1]])\n",
-        "    if error != 0:\n",
-        "      w[0] = w[0] + error * x_train[i][0] * speed\n",
-        "      print(w)\n",
-        "      w[1] = w[1] + error * x_train[i][1] * speed\n",
-        "      print(w)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def epoch(count, func_train, x_train, y_train, w):\n",
-        "  print(f\"Параметры весов:\\n\")\n",
-        "  for i in range(count):\n",
-        "    func_train(x_train, y_train, w)"
+        "## Версия после рефакторинга"
       ],
       "metadata": {
-        "id": "at7NGg_I5Y-5"
+        "id": "GY8do4_iCe_1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "1IY-H_WXC4xp"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "def init_weights(num_weights=2):\n",
+        "    \"\"\"\n",
+        "    Инициализирует и возвращает начальные веса для модели.\n",
+        "\n",
+        "    Веса выбираются случайным образом из диапазона [0, 1).\n",
+        "\n",
+        "    Аргументы:\n",
+        "        num_weights (int): Количество весов, которое нужно сгенерировать. По умолчанию равно 2.\n",
+        "\n",
+        "    Возвращает:\n",
+        "        Список случайных весов размером num_weights.\n",
+        "    \"\"\"\n",
+        "    return [random.random() for _ in range(num_weights)]\n",
+        "\n",
+        "def predict(x, w):\n",
+        "    \"\"\"\n",
+        "    Вычисляет предсказание модели.\n",
+        "\n",
+        "    Параметры:\n",
+        "        x (list): Входные данные (признаки).\n",
+        "        w (list): Веса модели.\n",
+        "\n",
+        "    Возвращает:\n",
+        "        int: Результат классификации (1 или 0).\n",
+        "    \"\"\"\n",
+        "    summator = x[0] * w[0] + x[1] * w[1]\n",
+        "    return 1 if summator >= 1 else 0\n",
+        "\n",
+        "def train(x_train, y_train, w, speed):\n",
+        "    \"\"\"\n",
+        "    Обучает модель, корректируя веса на основе ошибки предсказания.\n",
+        "\n",
+        "    Параметры:\n",
+        "        x_train (list): Список входных данных для обучения.\n",
+        "        y_train (list): Список правильных ответов.\n",
+        "        w (list): Текущие веса модели.\n",
+        "        speed (float): Скорость обучения (коэффициент корректировки весов).\n",
+        "    \"\"\"\n",
+        "    for i in range(len(x_train)):\n",
+        "        error = y_train[i] - predict(x_train[i], w)\n",
+        "        if error != 0:\n",
+        "            w[0] = w[0] + error * x_train[i][0] * speed\n",
+        "            print(w)\n",
+        "            w[1] = w[1] + error * x_train[i][1] * speed\n",
+        "            print(w)\n",
+        "\n",
+        "def epoch(count, func_train, x_train, y_train, w, speed):\n",
+        "    \"\"\"\n",
+        "    Выполняет несколько эпох обучения.\n",
+        "\n",
+        "    Параметры:\n",
+        "        count (int): Количество эпох.\n",
+        "        func_train (function): Функция для обучения.\n",
+        "        x_train (list): Список входных данных для обучения.\n",
+        "        y_train (list): Список правильных ответов.\n",
+        "        w (list): Текущие веса модели.\n",
+        "        speed (float): Скорость обучения.\n",
+        "    \"\"\"\n",
+        "    print(\"Параметры весов:\\n\")\n",
+        "    for i in range(count):\n",
+        "        func_train(x_train, y_train, w, speed)"
+      ],
+      "metadata": {
+        "id": "StJ2cxIHC2mn"
+      },
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "speed = 0.3  # Скорость обучения\n",
+        "w = init_weights()  # Инициализация весов\n",
+        "print(\"Стартовые веса: \", w)\n",
+        "\n",
+        "# Данные для обучения\n",
+        "x_train = [[1, 1], [1, 0], [0, 1], [0, 0]]\n",
+        "y_train = [1, 0, 0, 0]\n",
+        "\n",
+        "# Запуск обучения\n",
+        "epoch(5, train, x_train, y_train, w, speed)\n",
+        "print(\"\\nКонечные веса: \", w)"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "QEixEiqWhCrZ",
-        "outputId": "cfbcdc99-c2d3-43ca-f78e-a994a6d7ba4e"
+        "id": "_n1Pl5fNCfTF",
+        "outputId": "8f78ba93-16d6-49f1-e165-63041ec3f710"
       },
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "Стартовые веса:  [0.07566879909118085, 0.5599885549852378]\n",
             "Параметры весов:\n",
             "\n",
-            "[0.49, 0.4]\n",
-            "[0.49, 0.7]\n",
+            "[0.37566879909118084, 0.5599885549852378]\n",
+            "[0.37566879909118084, 0.8599885549852377]\n",
             "\n",
-            "Конечные веса:  [0.49, 0.7]\n"
+            "Конечные веса:  [0.37566879909118084, 0.8599885549852377]\n"
           ]
         }
-      ],
-      "source": [
-        "epoch(5, train, x_train, y_train, w)\n",
-        "print(\"\\nКонечные веса: \",w)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "# Вывод результатов после обучения\n",
+        "print(\"A B F\")\n",
+        "for x in x_train:\n",
+        "    print(f\"{x[0]} {x[1]}\", predict(x, w))"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "l8OpPocpfDbR",
-        "outputId": "5ffa16ee-4559-4b7d-8098-a670d423852b"
+        "id": "8d9L3zVLm1dD",
+        "outputId": "020eebee-cbbe-40a6-9a5d-0b0940c40b84"
       },
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "1\n",
-            "0\n",
-            "0\n",
-            "0\n"
+            "A B F\n",
+            "1 1 1\n",
+            "1 0 0\n",
+            "0 1 0\n",
+            "0 0 0\n"
           ]
         }
-      ],
-      "source": [
-        "print(\"A B F\")\n",
-        "print(\"1 1\", predict([1,1]))\n",
-        "print(\"1 0\",predict([1,0]))\n",
-        "print(\"0 1\",predict([0,1]))\n",
-        "print(\"0 0\",predict([0,0]))"
       ]
     },
     {
@@ -309,10 +336,37 @@
       "cell_type": "markdown",
       "source": [
         "Напишите функцию, которая делает проверку сразу всех примеров учебного\n",
-        "набора с текущим весами, а затем формирует и выводит в консоль получившуюся таблицу истинности."
+        "набора с текущим весами, а затем формирует и выводит в консоль получившуюся таблицу истинности.\n",
+        "\n",
+        "Пример:"
       ],
       "metadata": {
         "id": "7JVqWgVFDIaj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "```\n",
+        "# Вывод результатов после обучения\n",
+        "print(\"A B F\")\n",
+        "for x in x_train:\n",
+        "    print(f\"{x[0]} {x[1]}\", predict(x, w))\n",
+        "\n",
+        "Вывод в консоль:\n",
+        "\n",
+        "A B F\n",
+        "1 1 1\n",
+        "1 0 0\n",
+        "0 1 0\n",
+        "0 0 0\n",
+        "```\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "XusPV_JyoXp4"
       }
     },
     {
@@ -345,7 +399,7 @@
         "\n",
         "Составить отчет по результатам: название операции, стартовые веса, точность\n",
         "модели на старте (сколько ошибок), скорость обучения, возможно ли обучить нейрон для\n",
-        "получения 100%-ной точности, сколько эпох потребовалось, итоговые веса.\n"
+        "получения 100%-ной точности, сколько эпох потребовалось, итоговые веса (сохранить отдельно веса для каждой модели п.1-п.3).\n"
       ],
       "metadata": {
         "id": "K9q5EPhHDTdM"
