Создано с помощью Colaboratory

--- a/2. Обучение нейронной сети, используя библиотеку Keras в задачах регрессии и классификации/Практическое_занятие_№2_Основные_понятия_(БАЗА).ipynb
+++ b/2. Обучение нейронной сети, используя библиотеку Keras в задачах регрессии и классификации/Практическое_занятие_№2_Основные_понятия_(БАЗА).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMiOOZKpGIAfmo336yL5Gr4",
+      "authorship_tag": "ABX9TyNLolcGERIyCgm0GhsdTpIV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Alexandre77777/neural_networks/blob/main/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5%20%D0%B7%D0%B0%D0%BD%D1%8F%D1%82%D0%B8%D0%B5%20%E2%84%962/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%B7%D0%B0%D0%BD%D1%8F%D1%82%D0%B8%D0%B5_%E2%84%962_%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5_%D0%BF%D0%BE%D0%BD%D1%8F%D1%82%D0%B8%D1%8F_(%D0%91%D0%90%D0%97%D0%90).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Alexandre77777/neural_networks/blob/main/2.%20%D0%9E%D0%B1%D1%83%D1%87%D0%B5%D0%BD%D0%B8%D0%B5%20%D0%BD%D0%B5%D0%B9%D1%80%D0%BE%D0%BD%D0%BD%D0%BE%D0%B9%20%D1%81%D0%B5%D1%82%D0%B8%2C%20%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D1%83%D1%8F%20%D0%B1%D0%B8%D0%B1%D0%BB%D0%B8%D0%BE%D1%82%D0%B5%D0%BA%D1%83%20Keras%20%D0%B2%20%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%D0%B0%D1%85%20%D1%80%D0%B5%D0%B3%D1%80%D0%B5%D1%81%D1%81%D0%B8%D0%B8%20%D0%B8%20%D0%BA%D0%BB%D0%B0%D1%81%D1%81%D0%B8%D1%84%D0%B8%D0%BA%D0%B0%D1%86%D0%B8%D0%B8/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B5_%D0%B7%D0%B0%D0%BD%D1%8F%D1%82%D0%B8%D0%B5_%E2%84%962_%D0%9E%D1%81%D0%BD%D0%BE%D0%B2%D0%BD%D1%8B%D0%B5_%D0%BF%D0%BE%D0%BD%D1%8F%D1%82%D0%B8%D1%8F_(%D0%91%D0%90%D0%97%D0%90).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -199,7 +199,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Нейронные сети работают с числовыми данными, поэтому категориальные переменные необходимо преобразовать в числовой формат. Для этого часто используются методы как One-Hot Encoding, при котором каждая категория представляется отдельным бинарным признаком, и Label Encoding, при котором категориям присваиваются числовые значения."
+        "Нейронные сети работают с числовыми данными, поэтому категориальные переменные необходимо преобразовать в числовой формат. Для этого часто используются методы как One-Hot Encoding, при котором каждая категория представляется отдельным бинарным признаком, и Label Encoding, при котором категориям присваиваются числовые значения.\n",
+        "\n",
+        "* One-Hot Encoding:\n",
+        "\n",
+        "    Cat, Dogs\n",
+        "\n",
+        "    Cat = [1, 0]\n",
+        "    Dogs = [0, 1]\n",
+        "\n",
+        "\n",
+        "* Label Encoding:\n",
+        "\n",
+        "    Cat = 0\n",
+        "    Dogs = 1"
       ],
       "metadata": {
         "id": "fRH1sgln71OY"
