Создано с помощью Colaboratory

--- a/6. Автоэнкодеры/Тема_№6_Автоэнкодеры.ipynb
+++ b/6. Автоэнкодеры/Тема_№6_Автоэнкодеры.ipynb
@@ -4,12 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "ao6r2Q4qLL1n",
-        "oDtUkm181Y0r",
-        "szFe9Kz0bdvG"
-      ],
-      "authorship_tag": "ABX9TyOonFI4vKlMUJVpbWlLVd/B",
+      "authorship_tag": "ABX9TyMJDnF1+djMWkomqjZzDaX5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -359,6 +354,17 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "- В автоэнкодере используется сигмоидальная функция активации в последнем слое декодера, потому что она ограничивает выходные значения в диапазоне от 0 до 1. Это особенно полезно, когда автоэнкодер работает с изображениями, где пиксели нормализованы к этому диапазону. Сигмоидальная функция активации обеспечивает то, что выходные данные модели могут быть интерпретированы как вероятности, что делает её идеальной для задач, где выходные данные являются бинарными (в случае с классификацией) или находятся между 0 и 1.\n",
+        "\n",
+        "- Функция потерь `binary_crossentropy` используется в сочетании с сигмоидальной функцией активации, потому что она измеряет \"расстояние\" между двумя распределениями вероятностей - предсказанным и истинным. В контексте автоэнкодеров, которые часто используются для восстановления входных данных после сжатия, `binary_crossentropy` подходит для измерения различий между исходными и восстановленными изображениями."
+      ],
+      "metadata": {
+        "id": "1RED8OGcBVrY"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "input = layers.Input(shape=(28, 28, 1))\n",
@@ -428,7 +434,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> Теперь мы можем обучить наш автоэнкодер, используя train_data как входные данные, так и целевые. Обратите внимание, что мы настраиваем данные для проверки, используя тот же формат."
+        "> Теперь мы можем обучить наш автоэнкодер, используя train_data как входные и целевые данные одновременно. Обратите внимание, что мы настраиваем данные для проверки, используя тот же формат.Наш автоэнкодер сжимает, а затем восстанавливает исходные изображения из софрмировавшихся карт призкаков."
       ],
       "metadata": {
         "id": "aIggbe7bdHdY"
@@ -1226,15 +1232,27 @@
     {
       "cell_type": "code",
       "source": [
+        "# Создается пустой список для хранения признаков, извлеченных с помощью VGG\n",
         "vggfeatures = []\n",
+        "\n",
+        "# Перебираются образцы в наборе данных X\n",
         "for i, sample in enumerate(X):\n",
+        "  # Конвертируется одноканальное изображение в трехканальное (RGB)\n",
         "  sample = gray2rgb(sample)\n",
+        "  # Изменяется форма образца для соответствия входу сети VGG16\n",
         "  sample = sample.reshape((1,224,224,3))\n",
+        "  # Производится предварительная обработка образца для сети VGG16\n",
         "  sample = keras.applications.vgg16.preprocess_input(sample)\n",
+        "  # Получается предсказание модели для обработанного образца\n",
         "  prediction = newmodel.predict(sample)\n",
+        "  # Изменяется форма предсказания для соответствия выходу сети VGG16\n",
         "  prediction = prediction.reshape((7,7,512))\n",
+        "  # Добавляется предсказание в список признаков\n",
         "  vggfeatures.append(prediction)\n",
+        "\n",
+        "# Преобразуется список признаков в NumPy массив\n",
         "vggfeatures = np.array(vggfeatures)\n",
+        "# Выводится форма массива признаков\n",
         "print(vggfeatures.shape)"
       ],
       "metadata": {
@@ -3482,29 +3500,43 @@
     {
       "cell_type": "code",
       "source": [
+        "# Задается путь к изображениям для обработки\n",
         "testpath = '/content/drive/MyDrive/Dataset/Train/Cats/'\n",
+        "\n",
+        "# Получается список файлов в указанной директории\n",
         "files = os.listdir(testpath)\n",
+        "\n",
+        "# Перебираются файлы в директории\n",
         "for idx, file in enumerate(files):\n",
-        "    # Нормализация\n",
+        "    # Изображение преобразуется в массив и нормализуется\n",
         "    test = img_to_array(load_img(testpath+file))\n",
         "    test = resize(test, (224,224), anti_aliasing=True)\n",
-        "    test*= 1.0/255\n",
+        "    test *= 1.0/255\n",
+        "\n",
+        "    # Изображение конвертируется из RGB в Lab\n",
         "    lab = rgb2lab(test)\n",
         "    l = lab[:,:,0]\n",
+        "\n",
+        "    # Канал L преобразуется обратно в RGB\n",
         "    L = gray2rgb(l)\n",
         "    L = L.reshape((1,224,224,3))\n",
+        "\n",
+        "    # Изображение подготавливается для модели VGG16\n",
         "    L = keras.applications.vgg16.preprocess_input(L)\n",
-        "    # Предсказание\n",
+        "\n",
+        "    # Получается предсказание модели для канала L\n",
         "    vggpred = newmodel.predict(L)\n",
         "    ab = model.predict(vggpred)\n",
         "\n",
-        "    # Формирование выходного изображения\n",
+        "    # Каналы a и b умножаются на 128 для преобразования обратно в цветовое пространство LAB\n",
         "    ab = ab*128\n",
+        "\n",
+        "    # Создается новое изображение с каналами L, a и b\n",
         "    cur = np.zeros((224, 224, 3))\n",
         "    cur[:,:,0] = l\n",
         "    cur[:,:,1:] = ab\n",
         "\n",
-        "    # Сохранение выходного изображения\n",
+        "    # Изображение сохраняется на диск\n",
         "    imsave('/content/'+str(idx)+\".jpg\", lab2rgb(cur))\n"
       ],
       "metadata": {
