--- a/9. Использование модели YOLOv9 для решение задач детекции и классификации/Тема_№9_Использование_модели_YOLOv9_для_решение_задач_детекции_и_классификации.ipynb
+++ b/9. Использование модели YOLOv9 для решение задач детекции и классификации/Тема_№9_Использование_модели_YOLOv9_для_решение_задач_детекции_и_классификации.ipynb
@@ -56,9 +56,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**YOLO** (You Only Look Once) — это метод обнаружения объектов на изображениях в реальном времени. Давайте разберемся, как он работает:\n",
+        "YOLO (You Only Look Once) — это одна из самых популярных моделей для обнаружения объектов в компьютерном зрении. Главная особенность YOLO заключается в том, что, в отличие от других алгоритмов, она анализирует изображение только один раз (отсюда и название \"You Only Look Once\" — \"Ты смотришь только раз\"). Это делает YOLO значительно быстрее аналогов при сохранении высокой точности.\n",
         "\n",
-        "1. **Один раз взглянуть:**\n",
+        "1. **Ты смотришь только раз:**\n",
         "   - YOLO смотрит на всё изображение сразу, а не по частям.\n",
         "   - Другие методы многократно просматривают изображение, что занимает больше времени.\n",
         "\n",
@@ -72,7 +72,11 @@
         "     - Вероятность наличия объекта в ячейке.\n",
         "     - Класс объекта (например, \"автомобиль\" или \"человек\").\n",
         "\n",
-        "Таким образом, YOLO быстро и точно находит объекты, что делает его отличным для задач обнаружения в реальном времени."
+        "Таким образом, YOLO быстро и точно находит объекты, что делает его отличным для задач обнаружения в реальном времени.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "id": "eN-WYoftlG_x"
@@ -81,7 +85,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Общая схема моделей семейства YOLO:"
+        "## **Общая схема моделей семейства YOLO:**"
       ],
       "metadata": {
         "id": "ZTrhmaVAIXb8"
@@ -113,6 +117,247 @@
       ],
       "metadata": {
         "id": "N4Cd5qAWIL7j"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## **Рассмотрим более принцип работы модели YOLO более подробно:**"
+      ],
+      "metadata": {
+        "id": "Ae4tQJHXalzR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 1: Ввод изображения**\n"
+      ],
+      "metadata": {
+        "id": "bRsKV5lqarFw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Процесс начинается с подачи изображения в нейронную сеть. Изображение стандартизируется до определенного размера (например, 416×416 или 608×608 пикселей в зависимости от версии YOLO)."
+      ],
+      "metadata": {
+        "id": "RASuzN9Rao5W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 2: Извлечение признаков (Feature Extraction)**\n"
+      ],
+      "metadata": {
+        "id": "T-yF7_7Xatj5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Изображение проходит через **backbone** — глубокую сверточную нейронную сеть:\n",
+        "- Изображение последовательно обрабатывается серией сверточных слоев (как показано в левой части иллюстрации)\n",
+        "- Каждый сверточный слой извлекает всё более абстрактные признаки изображения\n",
+        "- Начальные слои обнаруживают простые элементы (линии, края, текстуры)\n",
+        "- Глубокие слои выявляют более сложные паттерны (формы, части объектов)"
+      ],
+      "metadata": {
+        "id": "j-8dVC6vawN_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 3: Создание карт признаков (Feature Maps)**\n"
+      ],
+      "metadata": {
+        "id": "W8SwKgNiaxQn"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "В процессе прохождения через сверточную сеть формируются карты признаков разного размера:\n",
+        "- Видно на схеме, как размерность слоев меняется от 448×448 до меньших размерностей\n",
+        "- Последний \"Detection Layer\" имеет выход, который можно представить в виде сетки"
+      ],
+      "metadata": {
+        "id": "oKdVaAVbaz16"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 4: Разделение на сетку (Grid)**\n"
+      ],
+      "metadata": {
+        "id": "PRHRjX4Ra39W"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Изображение концептуально разделяется на сетку S×S (например, 13×13 в YOLOv3):\n",
+        "- На иллюстрации это отображено в средней части как цветная сетка\n",
+        "- Каждая ячейка сетки отвечает за обнаружение объектов, центры которых попадают в эту ячейку"
+      ],
+      "metadata": {
+        "id": "rVfxF4gca6x0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 5: Предсказания для каждой ячейки сетки**\n"
+      ],
+      "metadata": {
+        "id": "P1BRhWCbbBhz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Для каждой ячейки сетки модель одновременно предсказывает:\n",
+        "- B ограничивающих рамок (bounding boxes)\n",
+        "- Вероятности присутствия объекта (objectness score)\n",
+        "- C классовых вероятностей (для каждого возможного класса)"
+      ],
+      "metadata": {
+        "id": "7-UaSiNQbCsu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 6: Предсказание параметров ограничивающих рамок**\n"
+      ],
+      "metadata": {
+        "id": "psDZmaLWbDYt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Для каждой потенциальной ограничивающей рамки модель предсказывает:\n",
+        "- Координаты центра рамки (x, y) относительно размеров ячейки\n",
+        "- Ширину и высоту рамки (w, h) относительно всего изображения\n",
+        "- Уверенность (confidence), что рамка содержит объект\n",
+        "\n",
+        "Это соответствует финальному выходному слою сети, показанному на схеме как \"Detection Layer\"."
+      ],
+      "metadata": {
+        "id": "RwiYIFZCbHJo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 7: Предсказание классов**\n"
+      ],
+      "metadata": {
+        "id": "qumwi-FsbIic"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Одновременно с предсказанием ограничивающих рамок, модель предсказывает вероятности принадлежности объекта к каждому классу:\n",
+        "- Для каждой ячейки определяются вероятности всех возможных классов\n",
+        "- Эти вероятности условны (при условии, что объект присутствует)"
+      ],
+      "metadata": {
+        "id": "9zQ3zWY7bMPM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 8: Расчет итоговой оценки (score)**\n"
+      ],
+      "metadata": {
+        "id": "2cpItU_5bVXs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Для каждой ограничивающей рамки вычисляется итоговая оценка:\n",
+        "- Confidence_score × Class_probability\n",
+        "- Это дает итоговую вероятность для каждого класса в каждой рамке"
+      ],
+      "metadata": {
+        "id": "RrQDUy-_bUFw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 9: Фильтрация предсказаний**\n"
+      ],
+      "metadata": {
+        "id": "WqeXmEplbZCG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Применяется пороговая фильтрация и подавление немаксимумов (Non-Maximum Suppression, NMS):\n",
+        "- Отбрасываются рамки с низкой итоговой оценкой (ниже порогового значения)\n",
+        "- Если несколько рамок перекрываются и относятся к одному объекту, оставляется только рамка с наивысшей оценкой"
+      ],
+      "metadata": {
+        "id": "tIPsIDisbWPz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **Шаг 10: Финальный вывод**\n"
+      ],
+      "metadata": {
+        "id": "p7DBUlCnbdcM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Итоговый результат — набор ограничивающих рамок с классами и уверенностью:\n",
+        "- Как показано на правой части изображения: собака (розовая рамка), велосипед (зеленая рамка) и автомобиль (оранжевая рамка)\n",
+        "- Каждая рамка имеет координаты, размеры, класс объекта и значение уверенности"
+      ],
+      "metadata": {
+        "id": "fHkI9deZbfZr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **Основные особенности YOLO**\n"
+      ],
+      "metadata": {
+        "id": "Z_Pa3snhb05H"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "- **Единый проход** — все вычисления происходят за один проход через нейронную сеть\n",
+        "- **Параллельная обработка** — определение местоположения и классификация выполняются одновременно\n",
+        "- **Anchor boxes** — в современных версиях YOLO используются предопределенные шаблоны рамок, адаптируемые к конкретным объектам\n",
+        "- **Многоуровневые предсказания** — более поздние версии YOLO используют Feature Pyramid Network для обнаружения объектов разного размера"
+      ],
+      "metadata": {
+        "id": "LJiDAeftaGju"
       }
     },
     {
@@ -166,55 +411,6 @@
       ],
       "metadata": {
         "id": "hF8BgghFnivY"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### **Метрики оценки в модели YOLO:**\n"
-      ],
-      "metadata": {
-        "id": "um_QwDc8K639"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "\n",
-        "\n",
-        "\n",
-        "Метрики помогают понять, насколько хорошо модель работает после обучения. Основные метрики:\n",
-        "\n",
-        "1. **Пересечение над объединением (Intersection over Union, IoU):**\n",
-        "   - $$ IoU = \\frac{площадь \\ пересечения}{площадь \\ объединения} $$\n",
-        "   - Оценивает, насколько точно модель определяет положение объектов.\n",
-        "\n",
-        "2. **Точность (Precision):**\n",
-        "   - $$ Precision = \\frac{TP}{TP + FP} $$\n",
-        "   - Показывает, какая доля предсказанных объектов была предсказана верно.\n",
-        "\n",
-        "3. **Полнота (Recall):**\n",
-        "   - $$ Recall = \\frac{TP}{TP + FN} $$\n",
-        "   - Оценивает, какую долю реальных объектов модель смогла обнаружить.\n",
-        "\n",
-        "4. **F1-мера (F1 Score):**\n",
-        "   - $$ F1 = 2 \\times \\frac{Precision \\times Recall}{Precision + Recall} $$\n",
-        "   - Сбалансированная метрика, учитывающая и точность, и полноту.\n",
-        "\n",
-        "5. **Средняя точность (Average Precision, AP) и средняя средняя точность (mean Average Precision, mAP):**\n",
-        "\n",
-        "  - **AP** оценивает точность модели для одного класса. Она вычисляется как среднее значение точности, рассчитанной на различных уровнях полноты.\n",
-        "\n",
-        "  - **mAP** - это среднее значение AP по всем классам. Это позволяет оценить общую производительность модели обнаружения объектов.\n",
-        "\n",
-        "  - Термины **mAP 50** и **mAP 50-95** относятся к способу вычисления mAP с использованием различных пороговых значений пересечения по объединению (Intersection over Union, IoU):\n",
-        "\n",
-        "    - **mAP 50** означает, что mAP вычисляется с пороговым значением IoU 0.5. Это означает, что предсказанные ограничивающие рамки считаются верными, если они пересекаются с истинными ограничивающими рамками более чем на 50%.\n",
-        "\n",
-        "    - **mAP 50-95** означает, что mAP вычисляется, усредняя mAP по различным пороговым значениям IoU от 0.5 до 0.95. Это предоставляет более полную оценку производительности модели, учитывая как высокую, так и низкую степень совпадения между предсказанными и истинными ограничивающими рамками."
-      ],
-      "metadata": {
-        "id": "ON1NfxGLl5MS"
       }
     },
     {
