--- a/7. Использование автоэнкодера для решения задач семантической сегментации/Практическая_работа_№7_Использование_автоэнкодера_для_решения_задач_семантической_сегментации.ipynb
+++ b/7. Использование автоэнкодера для решения задач семантической сегментации/Практическая_работа_№7_Использование_автоэнкодера_для_решения_задач_семантической_сегментации.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP5IIHXGeZNqiqKinnB4f/b",
+      "authorship_tag": "ABX9TyPWff1we8eFDL8AxJJeK4oi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Alexandre77777/neural_networks/blob/main/7.%20%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%B0%D0%B2%D1%82%D0%BE%D1%8D%D0%BD%D0%BA%D0%BE%D0%B4%D0%B5%D1%80%D0%B0%20%D0%B4%D0%BB%D1%8F%20%D1%80%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%20%D1%81%D0%B5%D0%BC%D0%B0%D0%BD%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B9%20%D1%81%D0%B5%D0%B3%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D0%B8/%D0%A0%D0%B0%D0%B1%D0%BE%D1%82%D0%B0_%E2%84%967_%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%B0%D0%B2%D1%82%D0%BE%D1%8D%D0%BD%D0%BA%D0%BE%D0%B4%D0%B5%D1%80%D0%B0_%D0%B4%D0%BB%D1%8F_%D1%80%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F_%D0%B7%D0%B0%D0%B4%D0%B0%D1%87_%D1%81%D0%B5%D0%BC%D0%B0%D0%BD%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B9_%D1%81%D0%B5%D0%B3%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D0%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Alexandre77777/neural_networks/blob/main/7.%20%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5%20%D0%B0%D0%B2%D1%82%D0%BE%D1%8D%D0%BD%D0%BA%D0%BE%D0%B4%D0%B5%D1%80%D0%B0%20%D0%B4%D0%BB%D1%8F%20%D1%80%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F%20%D0%B7%D0%B0%D0%B4%D0%B0%D1%87%20%D1%81%D0%B5%D0%BC%D0%B0%D0%BD%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B9%20%D1%81%D0%B5%D0%B3%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D0%B8/%D0%9F%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%B0%D1%8F_%D1%80%D0%B0%D0%B1%D0%BE%D1%82%D0%B0_%E2%84%967_%D0%98%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5_%D0%B0%D0%B2%D1%82%D0%BE%D1%8D%D0%BD%D0%BA%D0%BE%D0%B4%D0%B5%D1%80%D0%B0_%D0%B4%D0%BB%D1%8F_%D1%80%D0%B5%D1%88%D0%B5%D0%BD%D0%B8%D1%8F_%D0%B7%D0%B0%D0%B4%D0%B0%D1%87_%D1%81%D0%B5%D0%BC%D0%B0%D0%BD%D1%82%D0%B8%D1%87%D0%B5%D1%81%D0%BA%D0%BE%D0%B9_%D1%81%D0%B5%D0%B3%D0%BC%D0%B5%D0%BD%D1%82%D0%B0%D1%86%D0%B8%D0%B8.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -74,58 +74,92 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "outputId": "ea8fefda-a1d5-4956-d25e-7cfe8718eca0",
-        "id": "w0Gl9WRpgq8T"
+        "outputId": "d120fc18-a5ea-4da3-f2e7-743b039080f6",
+        "id": "w0Gl9WRpgq8T",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Requirement already satisfied: tifffile in c:\\users\\sa32\\anaconda3\\envs\\tf\\lib\\site-packages (2023.3.21)\n",
-            "Requirement already satisfied: numpy in c:\\users\\sa32\\anaconda3\\envs\\tf\\lib\\site-packages (from tifffile) (1.24.2)\n",
-            "Note: you may need to restart the kernel to use updated packages.\n"
+            "Requirement already satisfied: tifffile in /usr/local/lib/python3.11/dist-packages (2025.3.30)\n",
+            "Requirement already satisfied: numpy in /usr/local/lib/python3.11/dist-packages (from tifffile) (2.0.2)\n"
           ]
         }
       ],
       "source": [
-        "pip install tifffile"
+        "!pip install tifffile"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "%%capture\n",
+        "!pip install patchify\n",
+        "!pip install -U -q segmentation-models\n",
+        "\n",
+        "# Перезапуск среды выполнения\n",
+        "import os\n",
+        "os.kill(os.getpid(), 9)\n",
+        "\n",
+        "# После установки библиотек появится сообщение \"Сеанс прекращен по неизвестной причине.\"\n",
+        "# Так и должно быть. Запускайте код в следующих далее ячейках."
+      ],
       "metadata": {
-        "outputId": "d6f4541c-c904-41d1-d8f2-eef169ed2029",
-        "id": "ORTFCeUXgq8U"
+        "id": "OEy3L4Opgh_1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "outputId": "9c9f1f69-fef4-48f6-9728-68585f2a9e66",
+        "id": "ORTFCeUXgq8U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "Segmentation Models: using `keras` framework.\n"
+            "env: SM_FRAMEWORK=tf.keras\n",
+            "Segmentation Models: using `tf.keras` framework.\n"
           ]
         }
       ],
       "source": [
+        "# Стандартные библиотеки\n",
         "import os\n",
-        "import cv2\n",
-        "import numpy as np\n",
         "import glob\n",
+        "import random\n",
         "\n",
-        "import numpy as np\n",
+        "# Настройки и инициализации\n",
+        "%env SM_FRAMEWORK=tf.keras\n",
+        "\n",
+        "# Сторонние библиотеки\n",
+        "import cv2\n",
+        "import numpy as np # [[6]] [[10]]\n",
         "from matplotlib import pyplot as plt\n",
         "from patchify import patchify\n",
-        "import tifffile as tiff\n",
-        "from PIL import Image\n",
+        "from PIL import Image # [[10]]\n",
+        "import segmentation_models as sm\n",
+        "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
         "import tensorflow as tf\n",
         "from tensorflow import keras\n",
-        "import segmentation_models as sm\n",
         "from tensorflow.keras.metrics import MeanIoU\n",
-        "import random"
+        "import tifffile as tiff\n",
+        "\n",
+        "# Инициализация объекта scaler\n",
+        "scaler = MinMaxScaler()"
       ]
     },
     {
@@ -392,7 +426,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install split-folders\n"
+        "!pip install split-folders"
       ]
     },
     {
